--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -25,7 +25,9 @@
         <td>
           <%= user.hobby %>
         </td>
-
+        <td>
+          <%= render "public/relationships/btn", user: user %>
+        </td>
         <td>
           <%= link_to "Show", user_path(user.id) %>
         </td>
