--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -94,6 +94,7 @@
 
   <input type="checkbox" id="F">
   <label class="F" for="F"><h5 class="mt-3 text-center color"><%= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>
+  <!--非同期用のidをpaginate-userに統一!-->
   <div id="paginate-user" class="G">
     <%= render 'public/users/user_groups', user_groups: @user_groups %>
   </div>
