--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,25 +1,11 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-md-4 mt-4 mb-3'>
       <!--<h2><%#= @user.name %>さんの会員情報</h2>-->
       <%= render 'info', user: @user %>
-
-      <!--<input type="checkbox" id="F">-->
-      <!--<label class="F" for="F"><h5 class="mt-3 text-center color"><%#= @user.name %>さんの</br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>-->
-      <!--<div id="paginate-favorites" class="G">-->
-      <!--  <%#= render 'user_groups', user_groups: @user_groups %>-->
-      <!--</div>-->
     </div>
 
     <div class='col-md-8'>
-      <!--<div class="border rounded-circle p-2 text-center">-->
-      <!--  私は今日、<%#= render 'public/announcements/announcement', announcements: @announcements %>朝活をします!-->
-      <!--  <div class="text-center">-->
-      <!--    <%# if @user.id == current_user.id %>-->
-      <!--      <%#= link_to '宣言する!', new_user_announcement_path(@user.id), class: 'btn btn-outline-warning' %>-->
-      <!--    <%# end %>-->
-      <!--  </div>-->
-      <!--</div>-->
       <h2 class="text-center"><%= @user.name %>さんのブックマーク <i class="fa-solid fa-heart-circle-check" aria-hidden="true"></i></h2>
       <div id="favorite-posts">
         <%= render 'public/users/favorite_posts', posts: @favorite_posts %>
@@ -27,35 +13,3 @@
     </div>
   </div>
 </div>
-
-<!--<style>-->
-<!--  #F{-->
-<!--      display: none;-->
-<!--  }-->
-<!--  .F{-->
-<!--      cursor: pointer;-->
-<!--  }-->
-<!--  .G{-->
-<!--      display: none;-->
-<!--      height: 350px;-->
-<!--  }-->
-<!--  #F:checked+label+.G{-->
-<!--      display: block;-->
-<!--  }-->
-
-<!--  .color {-->
-<!--    background-color: #FFFFFF;-->
-<!--    -webkit-transition: all 0.3s ease;-->
-<!--    -moz-transition: all 0.3s ease;-->
-<!--    -o-transition: all 0.3s ease;-->
-<!--    transition: all  0.3s ease;-->
-<!--  }-->
-
-<!--  .color:hover {-->
-<!--    background-color: #FFFF66;-->
-<!--  }-->
-
-<!--  label {-->
-<!--    display: block;-->
-<!--  }-->
-<!--</style>-->
