--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,54 +1,15 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-md-4 mt-4 mb-3'>
       <!--<h2><%#= @user.name %>さんの<br>会員情報</h2>-->
       <%= render 'info', user: @user %>
-      <!--<input type="checkbox" id="F">-->
-      <!--<label class="F" for="F"><h5 class="mt-3 text-center color"><%#= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>-->
-      <!--<div id="paginate-users" class="G">-->
-      <!--  <%#= render 'public/users/user_groups', user_groups: @user_groups %>-->
-      <!--</div>-->
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">
         会員一覧 <i class="fa-solid fa-user-check"></i>
-        <!--<%#= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>-->
-        <!--  <i class="fa-solid fa-people-group"></i>-->
-        <!--<%# end %>-->
       </h2>
       <%= render 'index', users: @users %>
     </div>
   </div>
 </div>
 
-<!--<style>-->
-<!--  #F{-->
-<!--      display: none;-->
-<!--  }-->
-<!--  .F{-->
-<!--      cursor: pointer;-->
-<!--  }-->
-<!--  .G{-->
-<!--      display: none;-->
-<!--      height: 350px;-->
-<!--  }-->
-<!--  #F:checked+label+.G{-->
-<!--      display: block;-->
-<!--  }-->
-
-<!--  .color {-->
-<!--    background-color: #FFFFFF;-->
-<!--    -webkit-transition: all 0.3s ease;-->
-<!--    -moz-transition: all 0.3s ease;-->
-<!--    -o-transition: all 0.3s ease;-->
-<!--    transition: all  0.3s ease;-->
-<!--  }-->
-
-<!--  .color:hover {-->
-<!--    background-color: #FFFF66;-->
-<!--  }-->
-
-<!--  label {-->
-<!--    display: block;-->
-<!--  }-->
-<!--</style>-->
