--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,13 +1,8 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-md-4 mt-4 mb-3'>
       <!--<h4 class="text-center title-color"><%#= @user.name %>さんの<br>プロフィール</h4>-->
       <%= render 'info', user: @user %>
-      <!--<input type="checkbox" id="F">-->
-      <!--<label class="F" for="F"><h5 class="mt-3 text-center color"><%#= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>-->
-      <!--<div id="paginate-user" class="G">-->
-      <!--  <%#= render 'user_groups', user_groups: @user_groups %>-->
-      <!--</div>-->
     </div>
     <div class='col-md-8'>
 
@@ -42,34 +37,3 @@
   </div>
 </div>
 
-<!--<style>-->
-<!--  #F{-->
-<!--      display: none;-->
-<!--  }-->
-<!--  .F{-->
-<!--      cursor: pointer;-->
-<!--  }-->
-<!--  .G{-->
-<!--      display: none;-->
-<!--      height: 350px;-->
-<!--  }-->
-<!--  #F:checked+label+.G{-->
-<!--      display: block;-->
-<!--  }-->
-
-<!--  .color {-->
-<!--    background-color: #FFFFFF;-->
-<!--    -webkit-transition: all 0.3s ease;-->
-<!--    -moz-transition: all 0.3s ease;-->
-<!--    -o-transition: all 0.3s ease;-->
-<!--    transition: all  0.3s ease;-->
-<!--  }-->
-
-<!--  .color:hover {-->
-<!--    background-color: #FFFF66;-->
-<!--  }-->
-
-<!--  label {-->
-<!--    display: block;-->
-<!--  }-->
-<!--</style>-->
