--- a/app/views/public/groups/edit.html.erb
+++ b/app/views/public/groups/edit.html.erb
@@ -4,7 +4,7 @@
       <h3 class="text-center text-dark bg-light p-4 mb-0">コミュニティ編集 <i class="fa-solid fa-users-between-lines"></i></h3>
       <div class="form-body bg-light p-4">
         <%= render 'layouts/errors', obj: @group %>
-        <%= render 'public/groups/form', group: @group %>
+        <%= render 'public/groups/form_edit', group: @group %>
       </div>
     </div>
   </div>
