--- a/app/views/public/groups/_member.html.erb
+++ b/app/views/public/groups/_member.html.erb
@@ -3,7 +3,7 @@
  <% unless user.is_deleted %>
   <li class="list-group-item">
     <%= image_tag user.get_profile_image(50, 50) %>
-    <%= link_to user.name, user_path(user.id) %>
+    <%= link_to user.name, user_path(user.id), data: {"turbolinks"=>false} %>
   </li>
  <% end %>
 <% end %>
