--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -37,7 +37,7 @@
   <% @owner = User.find(group.owner_id)  %>
 
     <!--<div class="card w-200 mx-auto mt-4 h-500 shadow-lg">-->
-    <div class="card mt-1 mr-2 ml-1 px-0 shadow-lg col-4">
+    <div class="card mt-1 mr-2 ml-1 mb-1 px-0 shadow-lg col-4">
       <%= image_tag group.get_image(300, 300), class: "card-image-top h-50" %>
       <div class="card-body">
         <h4 class="card-title">
